[package]
name = "fkys-rs"
version = "0.3.0"
edition = "2021"
license = "WTFPL"
description = "F*cking Kill Yourself lang interpreter written in Rust"
authors = ["Maksim Bondarenkov"]
repository = "https://github.com/ognevnydemon/fkys-rs"
readme = "README.md"
rust-version = "1.74.1"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }

[features]
default = []
cli = []

[profile.release]
codegen-units = 1
lto = true
strip = true

[[bin]]
name = "fkysoxide"
path = "src/main.rs"
required-features = ["cli"]
