[package]
name = "fkys-rs"
version = "0.3.1"
edition = "2021"
license = "WTFPL"
description = "F*cking Kill Yourself lang interpreter written in Rust"
authors = ["Maksim Bondarenkov"]
repository = "https://github.com/ognevny/fkys-rs"
readme = "README.md"
rust-version = "1.79.0"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"], optional = true }

[features]
default = []
cli = ["clap"]

[profile.release]
codegen-units = 1
lto = true
strip = true

[lib]
path = "src/fkys.rs"

[[bin]]
name = "fkysoxide"
path = "src/main.rs"
bench = false
required-features = ["cli"]
